arc-script/arc-script-test/compile/src/tests/expect_fail/test_file_not_found.stderr
error: custom attribute panicked
 --> $DIR/test_file_not_found.rs:2:1
  |
2 | #[arc_script::compile("nonexistent_file.arc")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: File not found: Os { code: 2, kind: NotFound, message: "No such file or directory" }

error: aborting due to previous error

