arc-script/arc-script-test/compile/src/tests/expect_fail/test_file_not_found.rs
// compile-flags: --error-format=human
#[arc_script::compile("nonexistent_file.arc")]
mod arc {

}

fn main() {

}
